# Frame-Detection

./: .gitignore  .luarc.json  AutoCrop.lua  CHANGELOG.md  Info.lua  Makefile  debug_visualizer.py  frame_detection.py  installer.py  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: release.yml
frame_detection/: __init__.py  __main__.py  cli.py  detection.py  exceptions.py  filters.py  models.py  separation.py  shortcuts.py  visualizer.py
plugin/: AutoCrop.lua  Dialog.lua  Info.lua  JSON.lua  JsonEncoder.lua  Paths.lua  Run.lua  Settings.lua
scripts/: release.sh
