[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frame_detection"
version = "0.1.0"
description = "Film frame detection and cropping"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "pandas",
]

[project.scripts]
negative-auto-crop = "installer:main"

[tool.setuptools.packages.find]
include = ["frame_detection*"]

[tool.setuptools]
py-modules = ["installer"]
