[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "negative-auto-crop"
version = "0.0.4"
description = "Film negative frame detection and auto-cropping"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python",
    "matplotlib",
    "pandas",
]

[project.scripts]
negative-auto-crop = "frame_detection.cli:main"

[tool.setuptools.packages.find]
include = ["frame_detection*"]
